Adding additional table results
Made additional plots to check model robustness and display estimates in tables for RAND reviewers.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 data/eviction_filings/maricopa_county/evictions_maricopa_county_2024.csv
 data/eviction_filings/evictions_maricopa_county_2024_geocoded.csv
 *.xlsx
+data/mesa_crime/mesa_incidents_2015_2015.csv
+data/mesa_crime/mesa_dispatch_2021_2025.csv
