Adding final method doc
Incorporating edits based on comments from two QA reviewers.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ data/eviction_filings/maricopa_county/Eviction Spreadsheet Terminology (5).pdf
 data/eviction_filings/maricopa_county/Eviction Spreadsheet Terminology.pdf
 data/eviction_filings/maricopa_county/Eviction Timeline - EN.pdf
 data/eviction_filings/maricopa_county/Eviction Timeline - SP.pdf
+*.html
